syntax = "proto3";
package pb;

import "google/api/annotations.proto";

message StatusRequest {}

message StatusResponse {
  string version   = 1;
  int64  buildTime = 2;
  string buildHash = 3;
  int64  appStart  = 4;
}

service StatusService {
  rpc GetStatus(StatusRequest) returns (StatusResponse) {
    option (google.api.http) = {
      post: "/api/status"
      body: "*"
    };
  }
}
